# ds

./: CMakeLists.txt  README  README.md  cmake.config  index.html  params.json  update-build-number
cmake-modules/: DSUseMex.cmake
core/: CMakeLists.txt  Doxyfile.in  Makefile
core/include/: ds.h
core/include/ds/: column.h  driver.h  driver_dir.h  error.h  filter.h  filter_buff.h  filter_compress.h  filter_driver.h  filter_endian.h  filter_str.h  lookup.h  meta.h  storage.h  strings.h  types.h  utils.h  version.h
core/src/: column.cpp  driver.cpp  driver_dir.cpp  error.cpp  filter.cpp  filter_buff.cpp  filter_compress.cpp  filter_driver.cpp  filter_endian.cpp  filter_str.cpp  lookup.cpp  meta.cpp  storage.cpp  utils.cpp
examples/cpp/: CMakeLists.txt  main.cpp
examples/cpp/src/: main.cpp
examples/java/: pom.xml
examples/java/src/main/java/org/temk/ds/example/: Main.java
examples/matlab/: create_dataset.m  example.m
java/: CMakeLists.txt  pom.xml
java/src/main/java/org/temk/ds/: Column.java  DataStorage.java  Persistent.java  Type.java
java/src/main/java/org/temk/ds/example/: Base.java  Record.java
java/src/main/java/org/temk/ds/persistent/: DefaultFieldType.java  Meta.java  Persistent.java  PostLoad.java  PrePersist.java  Transient.java
java/src/main/java/org/temk/ds/util/: Buffer.java  BufferedColumn.java  DataStorageReader.java  DataStorageWrapper.java  DataStorageWriter.java
java/src/main/native/include/: dsjni.h  jni_string_accessor.h
java/src/main/native/include/ds/jni/: dsjni.h  strings.h
java/src/main/native/src/: dsjni.cpp
java/src/main/scripts/: gen_code.pm
matlab/: CMakeLists.txt  DataStorage.m  ds_test.m
matlab/include/ds/mx/: strings.h  utils.h
matlab/mex/: compile.m  ds_add.cpp  ds_close.cpp  ds_flush.cpp  ds_info.cpp  ds_meta_add.cpp  ds_meta_get.cpp  ds_open.cpp  ds_read.cpp  ds_read_index.cpp  ds_remove.cpp  ds_trunc.cpp  ds_version.cpp  ds_write.cpp  mx_string_accessor.h  utils.cpp  utils.h
python/: DS.py
utils/: CMakeLists.txt
utils/include/: csv2ds.h
utils/src/: appender.cpp  csv2ds.cpp  csv2ds_options.cpp  ds2csv.cpp
